--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>CSS Rule Structure Exercise</h1>
+  <h1>CSS Rule Structure Exercise 01</h1>
   <form action="index.html" method="get">
     <div>
       <label for="name">Name</label>
