--- a/src/index.html
+++ b/src/index.html
@@ -4,28 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Rule Structure Exercise</title>
+  <title>EXSM 3934 Exercise</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>CSS Rule Structure Exercise 01</h1>
+  <h1>EXSM 3934 Exercise</h1>
   <form action="index.html" method="get">
     <div>
       <label for="name">Name</label>
       <input id="name" type="text">
     </div>
-    <br>
     <div>
       <label for="email">E-Mail Address</label>
       <input id="email" type="text">
     </div>
-    <br>
     <div>
       <label for="message">Message</label>
       <textarea id="message"></textarea>
     </div>
-    <br>
     <div>
       <input id="submit" type="submit">
       <input type="reset">
@@ -34,4 +31,4 @@
   <script src="js/scripts.js" defer></script>
 </body>
 
-</html> 
+</html>
